--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -166,7 +166,7 @@
                 <nav class="navbar-sidebar">
                     <ul class="list-unstyled navbar__list">
                         <li class="active">
-                            <a href="#" onclick="getListCategory()">
+                            <a href="/admin/CategoryManagement">
                                 <i class="fas fa-chart-bar"></i>Category</a>
                         </li>
                         <li>
@@ -364,6 +364,7 @@
 
             <!-- MAIN CONTENT-->
             <div class="main-content">
+                <%=page%>
                 <div class="section__content section__content--p30">
                     <div class="container-fluid" id="main_content">
                         <div class="row">
