--- a/views/ProductManagement.ejs
+++ b/views/ProductManagement.ejs
@@ -174,7 +174,7 @@
                                 <i class="fas fa-table"></i>Product</a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/admin/OrderManagement">
                                 <i class="far fa-check-square"></i>Order</a>
                         </li>
                         <li>
