--- a/views/FormAddProduct.ejs
+++ b/views/FormAddProduct.ejs
@@ -1,9 +1,9 @@
 <div class="card">
         <div class="card-header">
-            <strong>Add Product</strong>
+            <strong>Edit Product</strong>
         </div>
         <div class="card-body card-block">
-            <form action="/admin/AddProduct" method="post" class="form-horizontal" enctype="multipart/form-data">
+            <form action="/admin/AddProduct" method="post" class="form-horizontal" enctype="multipart/form-data" >
                 <div class="row form-group">
                     <div class="col col-md-3">
                         <label for="product_name" class=" form-control-label">Product Name</label>
@@ -36,7 +36,7 @@
                             <label for="files" class=" form-control-label">Picture</label>
                         </div>
                         <div class="col-12 col-md-9">
-                            <input id="files" type="file" class="form-control" name = "files" multiple/>
+                            <input id="files" type="file" class="form-control" name = "files"/>
                             <span class="help-block"></span>
                         </div>
                 </div>
