--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -382,6 +382,24 @@
         </div>
 
     </div>
+    <div class="modal fade" id="mediumModalDelete" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none;" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="mediumModalLabel">Delete Product</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                        <p>Do you want to delete this product ?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="DeleteProduct('btnConfirm')" id="btnConfirm">Confirm</button>
+                </div>
+            </div>
+    </div>
     <div class="modal fade" id="mediumModal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none;" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
@@ -406,6 +424,7 @@
                 </div>
             </div>
     </div>
+</div>
     <!-- Jquery JS-->
     <script src="vendor/admin/jquery-3.2.1.min.js"></script>
     <!-- Bootstrap JS-->
